--- a/plant_monitoring_system/confs/prj_nucleo_wl55jc.conf
+++ b/plant_monitoring_system/confs/prj_nucleo_wl55jc.conf
@@ -46,8 +46,8 @@ CONFIG_ZBUS=y
 CONFIG_ZBUS_CHANNEL_NAME=y
 
 # Thread and stack analysis
-CONFIG_INIT_STACKS=y
-CONFIG_THREAD_STACK_INFO=y
-CONFIG_THREAD_ANALYZER=y
-CONFIG_THREAD_ANALYZER_AUTO=y
-CONFIG_THREAD_NAME=y
+#CONFIG_INIT_STACKS=y
+#CONFIG_THREAD_STACK_INFO=y
+#CONFIG_THREAD_ANALYZER=y
+#CONFIG_THREAD_ANALYZER_AUTO=y
+#CONFIG_THREAD_NAME=y
